--- a/Assets/Scripts/Managers/Managers.asmdef
+++ b/Assets/Scripts/Managers/Managers.asmdef
@@ -4,6 +4,7 @@
     "Utils",
     "SOs",
     "Unity.Addressables",
-    "Unity.ResourceManager"
+    "Unity.ResourceManager",
+    "Commons"
   ]
 }
